# Protocol

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: NEXT_STEPS.md  PRODUCT_SPEC.md  PROTOCOL_V2_ALPHA_REPORT.md  PROTOCOL_V2_BETA_REPORT.md  PROTOCOL_V2_CURRENT.md  V1_IMPLEMENTATION_PLAN.md  V2_ALPHA_PROTOCOL_MAP.md  如何提高自制力.docx
docs/archive/: V1_IMPLEMENTATION_PLAN.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: GlobalFocusButton.tsx  Sidebar.tsx
src/features/ctdp/: CreateChainForm.tsx  EditChainForm.tsx  protocolOptions.ts
src/lib/db/: index.ts  schema.sql
src/pages/: ChainDetail.tsx  ChainList.tsx  Dashboard.tsx  FocusSession.tsx  History.tsx  RSIP.tsx  Reservation.tsx  Settings.tsx
src/styles/: global.css
src/types/: index.ts
